vest-dsl/test/bad/invocation_args_type_mismatch.vest
foo(@a: u8) = {
  payload: [u8; @a],
}

bar = {
  @a: [u8; 10],
  @b: u8,
  f: foo(@a),
}
